[package]
name = "rust_dmx"
version = "0.3.1"
authors = ["general electrix <general.electrix@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["DMX", "lighting", "enttec"]
categories = ["hardware-support", "multimedia"]
repository = "https://github.com/generalelectrix/rust-dmx"
description = "Control of DMX-512 lighting control hardware."

[dependencies]
serialport = "4"
serde = { version = "1", features = ["derive"] }
regex = "1"
lazy_static = "1"
derive_more = "^0.99"
typetag = "0.1"