[package]
name = "rust_dmx"
version = "0.4.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["DMX", "lighting", "enttec"]
categories = ["hardware-support", "multimedia"]
repository = "https://github.com/generalelectrix/rust-dmx"
description = "Control of DMX-512 lighting control hardware."

[dependencies]
serialport = "4"
serde = { version = "1", features = ["derive"] }
derive_more = "^0.99"
typetag = "0.1"