[package]
name = "rust_dmx"
version = "0.6.0"
authors = ["general electrix <general.electrix@gmail.com>"]
edition = "2024"
license = "MIT"
keywords = ["DMX", "lighting", "enttec", "artnet"]
categories = ["hardware-support", "multimedia"]
repository = "https://github.com/generalelectrix/rust-dmx"
description = "Control of DMX-512 lighting control hardware."

[dependencies]
serialport = "4.6"
serde = { version = "1", features = ["derive"] }
typetag = "0.2"
thiserror = "1"
anyhow = "1"
log = "0.4"
artnet_protocol = "0.4.3"
